[gd_scene load_steps=9 format=2]

[ext_resource path="res://data/UI/scripts/map_ui.gd" type="Script" id=1]
[ext_resource path="res://data/UI/graphics/map_placeholder.jpg" type="Texture" id=2]
[ext_resource path="res://data/UI/graphics/map02.png" type="Texture" id=3]
[ext_resource path="res://data/UI/graphics/map03.png" type="Texture" id=4]
[ext_resource path="res://data/UI/graphics/map01.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.8033, 30.854 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.0951, 32.4395 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28.2209, 31.8639 )

[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="TextureFrame" type="TextureRect" parent="."]
margin_right = 1007.0
margin_bottom = 627.0
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="map01" type="Area2D" parent="."]
position = Vector2( 410.662, 225.152 )
scale = Vector2( 1.66398, 1.09939 )

[node name="Sprite" type="Sprite" parent="map01"]
visible = false
position = Vector2( -0.973775, -3.96312 )
scale = Vector2( 0.284043, 0.432771 )
z_index = 99
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="map01"]
position = Vector2( 0, 2.67455 )
shape = SubResource( 1 )

[node name="map02" type="Area2D" parent="."]
position = Vector2( 539.268, 231.469 )
scale = Vector2( 1.56527, 1.2404 )

[node name="Sprite" type="Sprite" parent="map02"]
visible = false
position = Vector2( -0.0669003, -1.86436 )
scale = Vector2( 0.298852, 0.36226 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="map02"]
position = Vector2( 0, 0.592606 )
shape = SubResource( 2 )

[node name="map03" type="Area2D" parent="."]
position = Vector2( 670.582, 235.982 )
scale = Vector2( 1.74859, 1.12759 )

[node name="Sprite" type="Sprite" parent="map03"]
visible = false
position = Vector2( -0.378819, 0.766159 )
scale = Vector2( 0.267617, 0.401241 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="map03"]
shape = SubResource( 3 )

[node name="label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
size_flags_vertical = 0

[connection signal="input_event" from="map01" to="." method="_on_map01_input_event"]
[connection signal="mouse_entered" from="map01" to="." method="_on_map01_mouse_entered"]
[connection signal="mouse_exited" from="map01" to="." method="_on_map01_mouse_exited"]
[connection signal="input_event" from="map02" to="." method="_on_map02_input_event"]
[connection signal="mouse_entered" from="map02" to="." method="_on_map02_mouse_entered"]
[connection signal="mouse_exited" from="map02" to="." method="_on_map02_mouse_exited"]
[connection signal="input_event" from="map03" to="." method="_on_map03_input_event"]
[connection signal="mouse_entered" from="map03" to="." method="_on_map03_mouse_entered"]
[connection signal="mouse_exited" from="map03" to="." method="_on_map03_mouse_exited"]
